<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">榕城点评</string>
    <string name="title_activity_main">首页</string>
    <string name="title_activity_welcome">欢迎</string>
    <string name="no_net_work_toast">网络错误，请重新设置网络</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="title_activity_merchant_detail">商户详情</string>
    <string name="merchant_list_activity_title">商户列表</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">正在加载数据，请稍后...</string>
    <string name="loaded">点击加载更多</string>
    <string name="showmore">显示更多</string>
    <string name="comment_title">评论</string>
    <string name="showmore_comments">查看更多评论</string>
    <string name="GOOD">优秀</string>
    <string name="NORMAL">普通</string>
    <string name="HORRIBLE">恶劣</string>
    <string name="product_rating">产品/口味：</string>
    <string name="decoration_rating">环境：</string>
    <string name="service_rating">服务：</string>
    <string name="title_activity_deal_detail">DealDetailActivity</string>
    <string name="merchant_list">商户列表</string>
    <string name="able_refundable">支持退款</string>
    <string name="show_more_merchant">显示更多商户</string>
    <string name="buy_imediatly">立即抢购</string>

    <string name="title_activity_recycle_view_demo">RecycleViewDemoActivity</string>
    <string name="make_call">电话</string>
    <string name="title_activity_show_image">图集</string>
    <string name="merchant_info">商户详情</string>
    <string name="deal_info">团购详情</string>
    <string name="title_activity_map">地图</string>
    <string name="begin_local_navigation">设置该位置为终点？</string>
    <string name="begin_navigation">生成路线</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="click_me">请点击我</string>
    <string name="title_activity_road_line_planning">路线规划</string>
    <string name="check_route">查找路线</string>
    <string name="title_activity_choose_city">选择城市</string>
    <string name="title_activity_deal_category">选择分类</string>
    <string name="enter_key_word">输入城市关键字</string>
    <string name="choose_city">选择城市</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_city">当前城市</string>
    <string name="hot_city">热门城市</string>
    <string name="location_faile">定位失败，请重新定位</string>
    <string name="database_nothing">数据库没有该类数据</string>

    <string-array name="hot_cities">
        <item>北京</item>
        <item>成都</item>
        <item>重庆</item>
        <item>广州</item>
        <item>杭州</item>
        <item>南京</item>
        <item>上海</item>
        <item>深圳</item>
        <item>天津</item>
        <item>武汉</item>
        <item>西安</item>
    </string-array>
    <string name="title_activity_my_scroll_view_demo">MyScrollViewDemoActivity</string>
    <string name="category_choose">分类选择</string>
    <string name="refund_anytime">随时退</string>
    <string name="title_activity_html5_web">Html5WebActivity</string>
    <string name="exist">是否退出应用？</string>
    <string name="title_activity_famlayout">FAMLayoutActivity</string>
    <string name="please_input_location">请输入附近地点名称</string>
    <string name="set_location">是否设置这个坐标为起始位置？</string>
    <string name="no_result">没有搜索结果</string>
    <string name="my_location">我的位置</string>
    <string name="recently_search_city">最近搜索城市</string>
    <string name="screening">分类筛选</string>
    <string name="login_success">登入成功！</string>
    <string name="user_local_map">使用本地地图</string>
    <string name="use_gaode_map">使用高德地图</string>
    <string name="choose_map">选择地图</string>
    <string name="map_notify">特别提醒：如果需要使用高德地图来定位商户，请事先安装最新版高德地图！</string>
    <string name="data_no_prepare_please_wait">数据正在整理，请稍后......</string>
    <string name="time_out">网络信号太弱，访问服务器超时</string>
    <string name="data_search_result_nothing">找不到该数据库数据</string>
    <string name="dianping_source">大众点评提供数据</string>
    <string name="title_activity_deal_history">DealHistoryActivity</string>
    <string name="deal_history">团购浏览记录</string>

</resources>
