<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/tv_comment_creator"
            style="@style/COMMON_BLUR_TEXT_WIDGET_MIDDLE"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:id="@+id/iv_user_vip_level"
            android:layout_toRightOf="@id/tv_comment_creator"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_comment_time"
            style="@style/common_small_text_size"
            android:layout_toRightOf="@id/iv_user_vip_level"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_rating"/>
        <com.chendeji.rongchen.common.view.SpanableTextView
            android:id="@+id/st_product_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decoration_rating"/>
        <com.chendeji.rongchen.common.view.SpanableTextView
            android:id="@+id/st_decoration_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_rating"/>
        <com.chendeji.rongchen.common.view.SpanableTextView
            android:id="@+id/st_service_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <TextView
        android:id="@+id/tv_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:maxLines="5"
        android:ellipsize="end"
        android:textColor="@color/gray_text"
        />

</merge>